tdf#147220 sw_redlinehide: update frames in ReplaceRangeImpl()

Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134483
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 1f8795df957c18c5c06bf1d68d0d60b1d30f015d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134448
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 085ae759c1dc10a40cf3be95201c1028e847d012)

Change-Id: Ie5d62eaec01a3b06ff1bd6070510384641ea7ad3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136175
Tested-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>