sw/qa/extras/uiwriter/uiwriter.cxx
@@ -129,6 +129,7 @@
 #include <iodetect.hxx>
 #include <wrthtml.hxx>
 #include <dbmgr.hxx>
+#include <txtfrm.hxx>
 
 namespace
 {
@@ -4145,6 +4146,43 @@ static void lcl_dispatchCommand(const uno::Reference<lang::XComponent>& xCompone
     CPPUNIT_ASSERT(xDispatchHelper.is());
 
     xDispatchHelper->executeDispatch(xFrame, rCommand, OUString(), 0, rPropertyValues);
+}
+
+CPPUNIT_TEST_FIXTURE(SwUiWriterTest, testTdf147220)
+{
+    SwDoc* pDoc = createDoc();
+    SwWrtShell* pWrtShell = pDoc->GetDocShell()->GetWrtShell();
+
+    pWrtShell->Insert(u"él");
+
+    // hide and enable
+    lcl_dispatchCommand(mxComponent, ".uno:ShowTrackedChanges", {});
+    lcl_dispatchCommand(mxComponent, ".uno:TrackChanges", {});
+    CPPUNIT_ASSERT(pDoc->getIDocumentRedlineAccess().IsRedlineOn());
+    CPPUNIT_ASSERT(
+        IDocumentRedlineAccess::IsShowChanges(pDoc->getIDocumentRedlineAccess().GetRedlineFlags()));
+    CPPUNIT_ASSERT(pWrtShell->GetLayout()->IsHideRedlines());
+
+    pWrtShell->GoStartSentence();
+    pWrtShell->SetMark();
+    pWrtShell->GoEndSentence();
+
+    // this did not remove the original text from the layout
+    pWrtShell->Replace(u"Él", false);
+
+    // currently the deleted text is before the replacement text, not sure if
+    // that is really required
+    CPPUNIT_ASSERT_EQUAL(OUString(u"élÉl"),
+        pWrtShell->GetCursor()->GetPoint()->nNode.GetNode().GetTextNode()->GetText());
+    CPPUNIT_ASSERT_EQUAL(OUString(u"Él"),
+        static_cast<SwTextFrame const*>(pWrtShell->GetCursor()->GetPoint()->nNode.GetNode().GetTextNode()->getLayoutFrame(nullptr))->GetText());
+
+    SwRedlineTable const& rRedlines(pDoc->getIDocumentRedlineAccess().GetRedlineTable());
+    CPPUNIT_ASSERT_EQUAL(SwRedlineTable::size_type(2), rRedlines.size());
+    CPPUNIT_ASSERT_EQUAL(RedlineType::Delete, rRedlines[0]->GetType());
+    CPPUNIT_ASSERT_EQUAL(OUString(u"él"), rRedlines[0]->GetText());
+    CPPUNIT_ASSERT_EQUAL(RedlineType::Insert, rRedlines[1]->GetType());
+    CPPUNIT_ASSERT_EQUAL(OUString(u"Él"), rRedlines[1]->GetText());
 }
 
 CPPUNIT_TEST_FIXTURE(SwUiWriterTest, testTdf135978)
